--- a/getTest.html
+++ b/getTest.html
@@ -29,7 +29,7 @@ function getTest() {
         }
     };
     var option = document.getElementById("tests").value;
-    xhttp.open("GET", getBaseURL() + "&test=" + option + ".hex", true);
+    xhttp.open("GET", getBaseURL() + "&test=" + option + ".cc", true);
     xhttp.send();
 }
 function getOK() {
