--- a/getTest.html
+++ b/getTest.html
@@ -1,6 +1,8 @@
 <html>
 <body>
 <script type="text/javascript">
+
+
 //AJAX FROM W3schools: https://www.w3schools.com/xml/ajax_intro.asp
 function getBaseURL() {
     if(document.getElementById("projects").value == "2"){
@@ -42,6 +44,28 @@ function getOK() {
     var option = document.getElementById("tests").value;
     xhttp.open("GET", getBaseURL() + "&test=" + option + ".ok", true);
     xhttp.send();
+}
+</script>
+<script>
+function myFunction() {
+  // Declare variables 
+  var input, filter, table, tr, td, i;
+  input = document.getElementById("myInput");
+  filter = input.value.toUpperCase();
+  table = document.getElementById("myTable");
+  tr = table.getElementsByTagName("tr");
+
+  // Loop through all table rows, and hide those who don't match the search query
+  for (i = 0; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[0];
+    if (td) {
+      if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+    } 
+  }
 }
 </script>
 <style>
@@ -86,6 +110,32 @@ a{
         </td>
     </tr>
 </table>
+
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+
+<table id="myTable">
+  <tr class="header">
+    <th style="width:60%;">Name</th>
+    <th style="width:40%;">Country</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Berglunds snabbkop</td>
+    <td>Sweden</td>
+  </tr>
+  <tr>
+    <td>Island Trading</td>
+    <td>UK</td>
+  </tr>
+  <tr>
+    <td>Koniglich Essen</td>
+    <td>Germany</td>
+  </tr>
+</table>
+
 </body>
 <script type="text/javascript">
 loadOptions();
