--- a/getTest.html
+++ b/getTest.html
@@ -99,7 +99,7 @@ a{
     <option value = "Q">BANANA</option>
 </select>
 <input type="button" onclick="getTest();getOK()" value = "Grab Test"></input>
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names....">
 <br />
 <table>
     <tr>
