--- a/getTest.html
+++ b/getTest.html
@@ -89,6 +89,9 @@ textarea{
 a{
     color:#FF8800;
 }
+td{
+    valign:top;
+}
 </style>
 <select id = "projects" onchange = "loadOptions();">
     <option value = "2">p2</option>
@@ -106,7 +109,7 @@ a{
         <td>
             <table id="myTable">
               <tr class="header">
-                <th style="width:60%;">Commit</th>
+                <th style="width:40%;">Commit</th>
                 <th style="width:10%;">Passing</th>
                 <th style="width:10%;">Attempted</th>
                 <th style="width:10%;">No Compile</th>
