--- a/getTest.html
+++ b/getTest.html
@@ -90,7 +90,7 @@ a{
     color:#FF8800;
 }
 td{
-    valign:top;
+    style=vertical-align:bottom
 }
 </style>
 <select id = "projects" onchange = "loadOptions();">
