--- a/getTest.html
+++ b/getTest.html
@@ -90,7 +90,7 @@ a{
     color:#FF8800;
 }
 td{
-    style=vertical-align:bottom
+    vertical-align: text-top;
 }
 </style>
 <select id = "projects" onchange = "loadOptions();">
