--- a/getTest.html
+++ b/getTest.html
@@ -90,7 +90,7 @@ a{
     color:#FF8800;
 }
 td, tr{
-    vertical-align: text-top;
+    vertical-align: text-bottom;
 }
 </style>
 <select id = "projects" onchange = "loadOptions();">
