--- a/getTest.html
+++ b/getTest.html
@@ -107,7 +107,7 @@ td, tr{
 <table>
     <tr>
         <td>
-            
+            <table id="myTable">
               <tr class="header">
                 <th style="width:40%;">Commit</th>
                 <th style="width:10%;">Passing</th>
@@ -131,6 +131,7 @@ td, tr{
                 <td>Koniglich Essen</td>
                 <td>Germany</td>
               </tr>
+            </table>
         </td>
         <td>
             <textarea readonly id="OK"></textarea>
