--- a/getTest.html
+++ b/getTest.html
@@ -90,7 +90,8 @@ a{
     color:#FF8800;
 }
 td, tr{
-    vertical-align: text-top;
+    position:absolute;
+    top:0px;
 }
 </style>
 <select id = "projects" onchange = "loadOptions();">
