--- a/getTest.html
+++ b/getTest.html
@@ -89,7 +89,7 @@ textarea{
 a{
     color:#FF8800;
 }
-td, tr{
+.part {
     position:absolute;
     top:0px;
 }
@@ -107,7 +107,7 @@ td, tr{
 <br />
 <table>
     <tr>
-        <td>
+        <td class="part">
             <table id="myTable">
               <tr class="header">
                 <th style="width:40%;">Commit</th>
@@ -134,7 +134,7 @@ td, tr{
               </tr>
             </table>
         </td>
-        <td>
+        <td class="part">
             <textarea readonly id="OK"></textarea>
         </td>
     </tr>
