--- a/getTest.html
+++ b/getTest.html
@@ -78,7 +78,7 @@ select{
     color: #FFFFFF;
 }
 table{
-    width:100%;
+    /* width:100%; */
 }
 textarea{
     width:100%;
@@ -89,7 +89,7 @@ textarea{
 a{
     color:#FF8800;
 }
-td, tr{
+td, th{
     border-bottom: 1px solid #ddd;
 }
 </style>
